[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "tracertm"
version = "0.2.0"
description = "Agent-native, multi-view requirements traceability and project management system"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "BMad", email = "bmad@example.com" },
]
keywords = [
    "requirements",
    "traceability",
    "rtm",
    "project-management",
    "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
]
dependencies = [
    "typer>=0.21.1",
    "rich>=14.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "typing_extensions>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.3",
    "psycopg2-binary>=2.9.11",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.1",
    "msgspec>=0.20.0",
    "msgpack>=1.1.2",
    "markdown>=3.10.1",
    "markdown-it-py>=4.0.0",
    "python-frontmatter>=1.1.0",
    "aiohttp>=3.13.3",
    "tenacity>=9.1.2",
    "grpcio>=1.70.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=3.0.0",
    "redis>=5.2.0",
    "anyio>=4.12.1",
    "watchdog>=6.0.0",
    "loguru>=0.7.3",
    "structlog>=25.5.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "prometheus-client>=0.24.1",
    "cryptography>=46.0.4",
    "bcrypt>=5.0.0",
    "pyjwt>=2.11.0",
    "keyring>=25.7.0",
    "workos>=5.40.0",
    "fastmcp>=3.0.0b1",
    "mcp>=1.26.0",
    "hatchet-sdk>=1.22.13",
    "nats-py>=2.12.0",
    "nkeys>=0.2.1",
    "temporalio>=1.7.0",
    "brotli-asgi>=1.6.0",
    "neo4j>=6.1.0",
    "minio>=7.2.20",
    "respx>=0.22.0",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.2.3",
    "hypothesis>=6.151.4",
    "faker>=40.1.2",
    "factory-boy>=3.3.3",
    "ruff>=0.14.14",
    "ty>=0.0.2",
    "poethepoet>=0.40.0",
    "tach>=0.33.2",
    "pandera>=0.29.0",
    "import-linter>=2.4.1",
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
    "openapi-python-client>=0.22.1",
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7.4",
    "vulture>=2.14",
    "radon>=6.0.1",
]
tui = [
    "textual>=0.47.0",
]
lint = [
    "ruff>=0.14.14",
    "ty>=0.0.2",
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7.4",
    "import-linter>=2.4.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.2.3",
    "hypothesis>=6.151.4",
    "faker>=40.1.2",
    "factory-boy>=3.3.3",
]
phase2 = [
    "poethepoet>=0.40.0",
    "tach>=0.33.2",
    "pandera>=0.29.0",
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
]
phase3 = [
    "hypothesis>=6.151.4",
    "pydantic-factories>=1.17.3",
]
observability = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-prometheus>=0.60b1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.52b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.52b0",
    "opentelemetry-instrumentation-httpx>=0.52b0",
    "opentelemetry-instrumentation-requests>=0.52b0",
    "opentelemetry-instrumentation-redis>=0.52b0",
    "prometheus-client>=0.24.1",
    "structlog>=25.5.0",
]
security = [
    "cryptography>=46.0.4",
    "bcrypt>=5.0.0",
    "pyjwt>=2.11.0",
    "authlib>=1.6.6",
    "pycasbin>=2.7.1",
]
distributed = [
    "ray>=2.53.0",
    "dask>=2026.1.2",
]
data = [
    "polars>=1.37.1",
    "duckdb>=1.5.0.dev228",
    "ibis-framework>=11.0.1.dev110",
]
ai = [
    "anthropic>=0.77.0",
]
ml = [
    "sentence-transformers>=5.2.2",
    "numpy>=2.4.1",
    "torch>=2.10.0",
]
all = [
    "poethepoet>=0.40.0",
    "tach>=0.33.2",
    "pandera>=0.29.0",
    "import-linter>=2.4.1",
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
    "hypothesis>=6.151.4",
    "pydantic-factories>=1.17.3",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "prometheus-client>=0.24.1",
    "structlog>=25.5.0",
    "cryptography>=46.0.4",
    "bcrypt>=5.0.0",
    "pyjwt>=2.11.0",
    "authlib>=1.6.6",
    "pycasbin>=2.7.1",
    "ray>=2.53.0",
    "dask>=2026.1.2",
    "polars>=1.37.1",
    "duckdb>=1.5.0.dev228",
    "ibis-framework>=11.0.1.dev110",
    "anthropic>=0.77.0",
    "sentence-transformers>=5.2.2",
    "numpy>=2.4.1",
    "vulture>=2.14",
    "radon>=6.0.1",
]

[project.scripts]
rtm = "tracertm.cli:app"
tracertm = "tracertm.cli:app"
tracertm-mcp = "tracertm.mcp:run_server"
rtm-mcp = "tracertm.mcp:run_server"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "tracertm*",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-ra",
    "-vv",
    "--strict-markers",
    "--tb=short",
    "-p",
    "asyncio",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (database, file system)",
    "e2e: End-to-end tests (full CLI workflows)",
    "cli: CLI command tests",
    "slow: Slow tests (>1s execution time)",
    "agent: Agent coordination tests (concurrent operations)",
    "asyncio: Async tests (mark for async tests)",
    "performance: Performance and load tests",
    "property: Property-based tests using Hypothesis",
    "benchmark: Benchmark tests for performance measurement",
    "smoke: Minimal critical-path checks",
    "chaos: Chaos/resilience tests (connection failures, resource exhaustion)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestAssertRewriteWarning",
    "ignore::RuntimeWarning",
]

[tool.pytest_asyncio]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = [
    "src/tracertm",
]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "except (ImportError|Exception|ModuleNotFoundError).*:",
    "except ImportError:",
    "except Exception:.*# (test )?fallback",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.interrogate]
fail-under = 85
path = [
    "src/",
]
exclude = [
    "tests",
    "build",
    "dist",
    ".venv",
]
ignore-init-module = true
ignore-init-method = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "build",
    "dist",
    ".venv",
    "ARCHIVE",
]
skips = [
    "B101",
]
severity = "medium"
confidence = "medium"

[tool.ruff]
line-length = 100
target-version = "py312"
preview = true
extend-exclude = [
    "ARCHIVE",
    "ARCHIVE/**",
    "cairosvg",
    "default",
    "temp",
    "temp/**",
]
force-exclude = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "PT",
    "SIM",
    "RUF",
    "RSE",
    "PERF",
    "LOG",
    "S",
    "ASYNC",
    "PIE",
    "RET",
    "PTH",
    "DTZ",
    "D",
    "FA",
    "Q",
    "C90",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1702",
    "PLR2004",
    "PLC",
    "PLW",
    "PLE",
    "FBT",
    "ANN",
    "TRY",
    "INT",
    "PGH",
    "ISC",
    "FURB",
    "G",
    "ARG",
    "TCH",
    "BLE",
    "A",
    "T10",
    "T20",
    "ERA",
    "SLF",
    "INP",
]
ignore = [
    "E501",
    "B008",
    "SIM105",
    "D203",
    "D212",
    "ANN401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-none-returning = false
suppress-dummy-args = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
    "D100",
    "D104",
]
"**/*_pb2.py" = [
    "E501",
    "E111",
    "SLF001",
    "ERA001",
]
"**/*_pb2_grpc.py" = [
    "N802",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "ANN401",
    "UP004",
    "TRY003",
    "E114",
    "PLR0913",
    "D102",
    "D103",
    "D205",
    "ARG002",
    "PLC2701",
    "FBT001",
    "FBT002",
    "FBT003",
]
"tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
    "S108",
    "S110",
    "S311",
    "S603",
    "S607",
    "S404",
    "S608",
    "PT011",
    "PT012",
    "PT017",
    "PT018",
    "PT019",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D417",
    "ANN001",
    "ARG001",
    "ARG002",
    "ARG005",
    "PLR0911",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "E402",
    "E722",
    "E741",
    "F401",
    "F403",
    "F404",
    "F811",
    "F821",
    "N801",
    "N802",
    "N806",
    "N999",
    "A001",
    "A002",
    "A004",
    "A006",
    "C901",
    "SIM102",
    "SIM115",
    "SIM117",
    "DTZ001",
    "DTZ005",
    "TRY002",
    "TRY003",
    "TRY300",
    "TRY301",
    "B017",
    "B018",
    "B903",
    "B904",
    "ASYNC240",
    "FURB101",
    "PERF402",
    "UP035",
    "RUF001",
    "RUF003",
    "RUF012",
    "RUF029",
    "RUF034",
    "RUF043",
    "RUF059",
    "RUF069",
    "ERA001",
    "INP001",
    "G004",
    "SLF001",
    "BLE001",
    "PLC0415",
    "FBT001",
    "FBT002",
    "FBT003",
    "PLC2701",
    "PLC1901",
]
"backend/tests/**/*.py" = [
    "S101",
    "S105",
    "S108",
    "S110",
    "S202",
    "PT019",
    "D100",
    "D107",
    "D417",
    "PLR2004",
    "PLR0915",
    "BLE001",
    "TRY300",
    "RUF029",
    "RUF069",
    "INP001",
    "ASYNC109",
    "PLC0415",
    "FBT001",
    "FBT002",
    "FBT003",
]
"scripts/**/*.py" = [
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1702",
    "PLR2004",
    "C901",
    "E402",
    "S101",
    "S108",
    "S110",
    "S112",
    "S314",
    "S404",
    "S405",
    "S603",
    "S607",
    "S608",
    "S311",
    "N806",
    "N999",
    "INP001",
    "D415",
    "D417",
    "DTZ003",
    "DTZ005",
    "B007",
    "B901",
    "B904",
    "TRY002",
    "TRY300",
    "TRY301",
    "TRY401",
    "BLE001",
    "G004",
    "G201",
    "ARG001",
    "FURB101",
    "FURB113",
    "PTH118",
    "ASYNC109",
    "ASYNC220",
    "ASYNC221",
    "A001",
    "F601",
    "SIM102",
    "RUF001",
    "RUF003",
    "RUF012",
    "FBT001",
    "FBT002",
    "FBT003",
    "PLC0415",
    "PLC1901",
    "PLW2901",
    "PLW0603",
    "PLW1510",
]
"src/tracertm/services/**/*.py" = [
    "BLE001",
    "PLR0913",
    "C901",
    "PLR0912",
    "PLR0915",
    "PLR0911",
    "TRY301",
    "S608",
    "S101",
    "S311",
    "SLF001",
    "A002",
    "D102",
    "TRY004",
    "S108",
    "S404",
    "PLC1901",
    "FBT001",
    "FBT002",
    "FBT003",
    "PLW2901",
]
"src/tracertm/mcp/**/*.py" = [
    "BLE001",
    "SLF001",
    "C901",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR0911",
    "PLR1702",
    "S608",
    "RUF029",
    "E402",
    "D417",
    "F821",
    "F822",
    "S104",
    "S105",
    "S110",
    "S112",
    "A002",
    "TRY004",
    "RUF006",
    "RUF067",
    "PLC0415",
    "PLW0603",
]
"src/tracertm/api/**/*.py" = [
    "BLE001",
    "TRY301",
    "E402",
    "S101",
    "B904",
    "RUF029",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "S608",
    "A002",
    "SLF001",
    "C901",
    "E741",
    "N815",
    "S104",
    "S105",
    "S311",
    "TRY004",
    "SIM102",
    "RUF001",
    "RUF034",
    "PLC0415",
    "FBT001",
    "FBT002",
    "FBT003",
    "ANN201",
    "ANN202",
    "PLW0603",
]
"src/tracertm/api/client.py" = [
    "D102",
    "D103",
    "D105",
    "D107",
    "D200",
    "D205",
    "D212",
    "D415",
    "D417",
    "TRY003",
    "S110",
    "DTZ003",
    "PLW2901",
    "PLW1641",
    "ARG002",
]
"src/tracertm/repositories/**/*.py" = [
    "PLR0913",
    "PLR0912",
    "C901",
    "PLC0415",
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/agent/**/*.py" = [
    "SLF001",
    "S404",
    "S603",
    "PLC0415",
    "PLW0603",
]
"src/tracertm/infrastructure/**/*.py" = [
    "BLE001",
    "PLR0913",
    "N814",
    "ASYNC240",
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/config/**/*.py" = [
    "BLE001",
    "FBT001",
    "FBT002",
    "FBT003",
    "PLW0603",
]
"src/tracertm/core/config.py" = [
    "PLW0603",
]
"src/tracertm/database/**/*.py" = [
    "BLE001",
    "SLF001",
    "PLW0603",
]
"src/tracertm/storage/**/*.py" = [
    "C901",
    "SLF001",
    "S608",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "D417",
    "PLC0415",
]
"src/tracertm/vault/**/*.py" = [
    "TRY301",
]
"src/tracertm/observability/**/*.py" = [
    "RUF029",
    "C901",
    "TRY301",
    "PLR0915",
    "PLC0415",
    "PLW0603",
]
"src/tracertm/clients/**/*.py" = [
    "PLR0913",
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/grpc/**/*.py" = [
    "N802",
]
"src/tracertm/preflight.py" = [
    "PLR0912",
    "PLR0911",
    "S310",
    "PLC0415",
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/testing_factories.py" = [
    "A002",
]
"src/tracertm/models/**/*.py" = [
    "A003",
    "S105",
]
"src/tracertm/schemas/**/*.py" = [
    "S105",
    "D106",
]
"src/tracertm/tui/**/*.py" = [
    "N801",
    "D106",
    "D417",
    "FBT001",
    "FBT002",
    "FBT003",
    "S404",
    "S607",
    "C901",
    "RUF067",
]
"src/tracertm/cli/**/*.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"alembic/**/*.py" = [
    "E402",
    "INP001",
    "ERA001",
    "BLE001",
    "RUF067",
    "A002",
    "DTZ005",
    "PLR0915",
    "PLR0912",
    "C901",
    "S608",
    "PLC0415",
]
"samples/**/*.py" = [
    "PLR0913",
    "C901",
    "E402",
    "INP001",
    "S110",
    "S311",
    "PTH118",
    "SIM113",
    "PERF402",
    "A001",
    "A002",
    "DTZ005",
    "B903",
    "B909",
    "E722",
    "FURB101",
    "RUF067",
    "S102",
    "BLE001",
]
".claude/**/*.py" = [
    "INP001",
    "ANN401",
    "BLE001",
    "RUF067",
    "A002",
    "DTZ005",
    "PTH118",
    "SIM113",
]
"find_violations.py" = [
    "INP001",
    "C901",
    "PLR0912",
    "PLR2004",
    "S110",
    "A001",
    "PTH118",
    "BLE001",
    "PLW2901",
]
"generate_dep_tree.py" = [
    "INP001",
    "C901",
    "PLR0912",
    "PLR0915",
    "S110",
    "A001",
    "PTH118",
    "FURB101",
    "BLE001",
]
"tests/unit/services/test_ai_tools.py" = [
    "ASYNC230",
    "ASYNC240",
    "PTH118",
]
"src/tracertm/agent/test_events.py" = [
    "S101",
    "S108",
    "PT019",
]
"src/tracertm/services/agents/codex_service.py" = [
    "S404",
    "PLC0415",
]
"src/tracertm/services/ai_tools.py" = [
    "PLR1702",
    "S404",
    "TRY300",
    "PLC0415",
    "PLW0603",
]
"src/tracertm/services/encryption_service.py" = [
    "PLW0603",
]
"src/tracertm/services/execution/docker_orchestrator.py" = [
    "ASYNC109",
    "ASYNC240",
    "S404",
]
"src/tracertm/services/execution/native_orchestrator.py" = [
    "ASYNC109",
    "ASYNC240",
]
"src/tracertm/workflows/activities.py" = [
    "PLC0415",
]
"src/tracertm/workflows/checkpoint_activities.py" = [
    "PLC0415",
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/workflows/sandbox_snapshot.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/api/handlers/websocket.py" = [
    "ASYNC109",
]
"src/tracertm/api/main.py" = [
    "PLW2901",
]
"src/tracertm/mcp/tools/param.py" = [
    "E402",
    "PLR1702",
    "PT028",
    "RUF029",
    "S404",
    "S603",
    "S607",
]
"src/tracertm/mcp/tools/params/common.py" = [
    "RUF029",
]
"src/tracertm/mcp/tools/params/config.py" = [
    "RUF029",
]
"src/tracertm/mcp/tools/params/database.py" = [
    "RUF029",
]
"src/tracertm/mcp/tools/params/io_operations.py" = [
    "RUF029",
]
"src/tracertm/mcp/tools/auth_config_db.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/logging_config.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/tools/bmm_workflows.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/workflow_executor.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/cli_integration.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/core.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/middleware.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/tools/base.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/tools/design_ingest_migration.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/tools/response_optimizer.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/error_handlers.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/metrics.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/telemetry.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/tools/base_async.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/tools/items_optimized.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"src/tracertm/mcp/tools/links.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
]
"conftest.py" = [
    "F401",
    "S101",
    "PT018",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "BLE001",
    "PLC0415",
]
"scripts/seed_swiftride_tracertm.py" = [
    "S608",
]
"scripts/link_swiftride_uiux_items.py" = [
    "S608",
]
"scripts/generate_swiftride_uiux_items.py" = [
    "S608",
]
"scripts/export_projects_snapshot.py" = [
    "S608",
]
"scripts/introspect_project.py" = [
    "S608",
]
"scripts/generate_swiftride_tests.py" = [
    "S404",
    "S603",
]
"scripts/service_manager.py" = [
    "S404",
    "S603",
    "S607",
]
"scripts/update_coverage_daily.py" = [
    "S404",
    "S607",
]
"scripts/utils/db_utils.py" = [
    "S404",
    "S603",
    "S607",
    "S608",
]
"scripts/utils/service_utils.py" = [
    "S404",
    "S110",
    "S603",
    "S607",
]
"scripts/validate_seed_and_access.py" = [
    "S608",
    "S112",
]
"scripts/python/**" = [
    "S311",
    "N999",
    "S603",
    "S606",
    "S608",
    "S404",
    "T201",
]
"scripts/python/ENHANCEMENT_API_ENDPOINTS.py" = [
    "N999",
]
"scripts/python/seed_comprehensive.py" = [
    "S311",
]
"scripts/python/seed_rich_single_project.py" = [
    "S311",
]
"scripts/python/seed_swiftride_tracertm.py" = [
    "S608",
]
"scripts/python/service_manager.py" = [
    "S404",
    "S603",
    "S607",
]
"scripts/python/update_coverage_daily.py" = [
    "S404",
    "S607",
]
"scripts/python/validate_seed_and_access.py" = [
    "S608",
    "S112",
]
"scripts/python/apply_test_cases_migrations.py" = [
    "E402",
]
"scripts/python/complete_setup.py" = [
    "S404",
    "S603",
]
"scripts/python/create_dense_projects.py" = [
    "E402",
    "S311",
    "S110",
    "S112",
]
"scripts/python/db-slow-query-report.py" = [
    "N999",
]
"scripts/python/dev-quick.py" = [
    "N999",
    "S104",
]
"scripts/python/dev-start-with-preflight.py" = [
    "N999",
    "S603",
    "S606",
]
"scripts/python/export_projects_snapshot.py" = [
    "S608",
]
"scripts/python/generate_swiftride_data.py" = [
    "S608",
]
"scripts/python/generate_swiftride_tests.py" = [
    "S404",
    "S603",
]
"scripts/python/generate_swiftride_uiux_items.py" = [
    "S608",
]
"scripts/python/introspect_project.py" = [
    "S608",
]
"scripts/python/link_swiftride_uiux_items.py" = [
    "S608",
]
"scripts/python/quality-report.py" = [
    "N999",
]
"scripts/python/rewrite_code_like_titles.py" = [
    "RUF027",
    "S608",
]
"scripts/quality-report.py" = [
    "N999",
]
"scripts/db-slow-query-report.py" = [
    "N999",
]
"scripts/dev-start-with-preflight.py" = [
    "N999",
    "S603",
    "S606",
]
"scripts/dev-quick.py" = [
    "N999",
]
"scripts/rewrite_code_like_titles.py" = [
    "RUF027",
    "S608",
]
"scripts/create_dense_projects.py" = [
    "E402",
    "S311",
    "S110",
    "S112",
]
"**/bmm-auto.py" = [
    "N999",
    "S404",
    "S607",
    "S603",
    "SLF001",
]
"populate_projects.py" = [
    "S404",
    "S603",
]
"scripts/apply_test_cases_migrations.py" = [
    "E402",
]
"scripts/complete_setup.py" = [
    "S404",
    "S603",
]
"ENHANCEMENT_IMPLEMENTATION_STARTER.py" = [
    "S404",
    "S603",
    "S607",
    "N999",
]
"scripts/ENHANCEMENT_IMPLEMENTATION_STARTER.py" = [
    "S404",
    "S603",
    "S607",
    "N999",
]
"scripts/ENHANCEMENT_API_ENDPOINTS.py" = [
    "N999",
]
"src/tracertm/mcp/tools/params/_lazy_stub.py" = [
    "PT028",
]
"src/tracertm/mcp/tools/params/query_test.py" = [
    "PT028",
]
"src/tracertm/mcp/tools/params/storage.py" = [
    "E402",
    "RUF029",
]
"src/tracertm/mcp/tools/specifications.py" = [
    "RUF029",
]
"src/tracertm/mcp/tools/optional_features.py" = [
    "RUF029",
    "FBT001",
    "FBT002",
    "FBT003",
]
"DOCKER_SDK_ASYNC_EXAMPLES.py" = [
    "S108",
    "S110",
    "N999",
]
"scripts/DOCKER_SDK_ASYNC_EXAMPLES.py" = [
    "S108",
    "S110",
    "N999",
]
"src/tracertm/services/spec_analytics_service_v2.py" = [
    "PLR2004",
]
"src/tracertm/services/stateless_ingestion_service.py" = [
    "UP035",
]
"src/tracertm/services/ai_service.py" = [
    "PLR1702",
    "PLC0415",
    "PLW0603",
]
"src/tracertm/services/spec_analytics_service.py" = [
    "PLR2004",
]
"src/tracertm/services/workos_auth_service.py" = [
    "PLC0415",
]
"src/tracertm/services/import_service.py" = [
    "PLC0415",
]
"src/tracertm/services/agent_monitoring_service.py" = [
    "PLC0415",
]
"src/tracertm/services/checkpoint_service.py" = [
    "PLC0415",
    "PLW0603",
]
"src/tracertm/services/export_service.py" = [
    "PLC0415",
]
"src/tracertm/services/project_backup_service.py" = [
    "PLC0415",
]
"src/tracertm/services/temporal_service.py" = [
    "PLC0415",
]
"src/tracertm/config/github_app.py" = [
    "FBT001",
    "FBT002",
    "FBT003",
    "PLC0415",
]
"src/tracertm/database/ensure_problems_processes.py" = [
    "PLC0415",
]
"src/tracertm/tui/adapters/storage_adapter.py" = [
    "PLC0415",
]
"src/tracertm/storage/local_storage.py" = [
    "PLR2004",
]
"src/tracertm/storage/markdown_parser.py" = [
    "PLR2004",
]
"src/tracertm/utils/figma.py" = [
    "PLR2004",
]
"src/tracertm/repositories/item_spec_repository.py" = [
    "PLR2004",
    "PLC0415",
]
"tests/component/services/test_bulk_operation_service_comprehensive.py" = [
    "PLW2901",
]
"tests/component/storage/test_storage_file_watcher.py" = [
    "PLW2901",
]
"tests/performance/run_performance_tests.py" = [
    "PLW1510",
]
"tests/performance/test_cli_startup.py" = [
    "PLW1510",
]

[tool.ruff.lint.isort]
known-first-party = [
    "tracertm",
]
known-third-party = [
    "typer",
    "rich",
    "sqlalchemy",
    "pydantic",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ty.src]
include = [
    "src",
    "tests",
]
exclude = [
    "ARCHIVE",
    "ARCHIVE/**",
    "ARCHIVE/CONFIG/default",
    "backend/tests",
    "cli",
    "cli/tests",
    "frontend/disable",
    "scripts",
    "scripts/**",
    "src/tracertm/vault",
    "src/tracertm/vault/**",
    "tests/unit/validation/test_dataframe_schema_validation.py",
]
respect-ignore-files = true

[[tool.ty.overrides]]
include = [
    "tests/component/storage/test_sync_engine_errors.py",
    "tests/component/storage/test_sync_queue.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = [
    "conftest.py",
    "tests/conftest.py",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
invalid-assignment = "ignore"
call-non-callable = "ignore"

[[tool.ty.overrides]]
include = [
    "tests/e2e/**",
    "tests/fixtures.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = [
    "tests/integration/workflows/**",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = [
    "tests/mcp/**",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unknown-argument = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
unsupported-operator = "ignore"

[[tool.ty.overrides]]
include = [
    "tests/performance/**",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
invalid-argument-type = "ignore"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/api/routers/item_specs.py",
]

[tool.ty.overrides.rules]
missing-argument = "ignore"
unknown-argument = "ignore"
invalid-argument-type = "ignore"
invalid-parameter-default = "ignore"
invalid-return-type = "ignore"
redundant-cast = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/api/main.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/api/handlers/github.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/api/routers/integrations.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/api/routers/items.py",
]

[tool.ty.overrides.rules]
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/proto/**",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/vault/**",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/mcp/**",
    "tracertm/mcp/**",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
call-non-callable = "ignore"
unsupported-operator = "ignore"
invalid-assignment = "ignore"
no-matching-overload = "ignore"
invalid-argument-type = "ignore"
parameter-already-assigned = "ignore"
unknown-argument = "ignore"
possibly-missing-attribute = "ignore"
possibly-missing-implicit-call = "ignore"
redundant-cast = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/observability/**",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/repositories/**",
    "tracertm/repositories/**",
]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
no-matching-overload = "ignore"
invalid-return-type = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/storage/**",
]

[tool.ty.overrides.rules]
unsupported-operator = "ignore"
possibly-missing-implicit-call = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/schemas.py",
    "tracertm/schemas.py",
]

[tool.ty.overrides.rules]
possibly-missing-import = "ignore"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/services/**",
    "tracertm/services/**",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
possibly-missing-import = "ignore"
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/workflows/**",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = [
    "tests/_disabled_tests/**",
    "tests/TEST-TEMPLATE.py",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
unresolved-reference = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
not-subscriptable = "ignore"
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/models/_exports.py",
]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = [
    "src/tracertm/api/routers/agent.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = [
    "tests/api/**",
    "tests/phase5/**",
    "tests/component/**",
    "tests/grpc/**",
    "tests/e2e/**",
    "tests/fixtures.py",
    "tests/test_execution_routes.py",
    "tests/mcp/**",
    "tests/performance/**",
    "tests/unit/**",
    "tests/integration/**",
    "tests/workflows/**",
    "tests/chaos/**",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
unresolved-attribute = "ignore"
unresolved-reference = "ignore"
possibly-missing-attribute = "ignore"
possibly-missing-import = "ignore"
possibly-missing-implicit-call = "ignore"
not-subscriptable = "ignore"
unsupported-operator = "ignore"
deprecated = "ignore"
unknown-argument = "ignore"
missing-argument = "ignore"
redundant-cast = "ignore"
call-non-callable = "ignore"
not-iterable = "ignore"
invalid-return-type = "ignore"
invalid-await = "ignore"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unused-ignore-comment = "error"
possibly-unresolved-reference = "error"
possibly-missing-attribute = "error"
possibly-missing-import = "error"

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.importlinter]
root_packages = [
    "tracertm",
]

[[tool.importlinter.contracts]]
name = "Core layered architecture"
type = "layers"
layers = [
    "config",
    "db",
    "models",
    "repositories",
    "storage",
    "clients",
    "services",
    "api",
]
containers = [
    "tracertm",
]

[[tool.importlinter.contracts]]
name = "API must not access lower layers directly"
type = "forbidden"
source_modules = [
    "tracertm.api",
]
forbidden_modules = [
    "tracertm.db",
    "tracertm.models",
    "tracertm.repositories",
    "tracertm.storage",
    "tracertm.clients",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/tracertm",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/pyproject.toml",
    "/README.md",
]

[tool.poe.tasks]
lint = "ruff check --fix ."
type-check = "ty check src/"
arch-check = "tach check"
arch-show = "tach show"
security = "semgrep --config=p/security-audit src/"
bandit = "bandit -r src/"
pip-audit = "pip-audit"
quality = [
    { ref = "format" },
    { ref = "metrics" },
    { ref = "arch-check" },
    { ref = "bandit" },
    { ref = "pip-audit" },
    { ref = "security" },
    { ref = "test" },
]
test = "pytest"
test-cov = "pytest --cov=src/tracertm --cov-report=html"
test-parallel = "pytest -n auto"
test-unit = "pytest -m unit"
test-integration = "pytest -m integration"
all = [
    { ref = "quality" },
    { ref = "test-cov" },
]

[tool.poe.tasks.format]
shell = "ruff format . && ruff check --fix . && ty check src/"

[tool.poe.tasks.check]
shell = "ruff check . && ty check src/"

[tool.poe.tasks.metrics]
shell = "vulture src/ && radon cc src/ -a -s && radon mi src/ -s"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.2.3",
    "hypothesis>=6.151.4",
    "faker>=40.1.2",
    "factory-boy>=3.3.3",
    "ruff>=0.14.14",
    "ty>=0.0.2",
    "vulture>=2.14",
    "radon>=6.0.1",
    "interrogate>=1.7.0",
]
